# Rust-the-book

./: .gitignore  README.md
forcias/chapter1/play_trait/: Cargo.toml
forcias/chapter1/play_trait/src/: main.rs
forcias/chapter2/samplecli/: Cargo.toml
forcias/chapter2/samplecli/src/: main.rs
forcias/chapter3/todo/: Cargo.toml  todo.db
forcias/chapter3/todo/src/: main.rs
forcias/chapter4/samplecli/: Cargo.toml
forcias/chapter4/samplecli/src/: main.rs
forcias/chapter7/gui_iced/: Cargo.toml
forcias/chapter7/gui_iced/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
variables/: Cargo.toml
variables/src/: main.rs
