[package]
name = "todo"
version = "0.1.0"
authors = ["soheyHashimoto <heyso1209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.2.0"
askama = "0.10.5"
thiserror = "1.0.25"
rusqlite = { version = "0.25.3", features = ["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
serde = { version = "1.0", features = ["derive"] }